samples/_failures_safe/1761520545_9704bb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b97c1c74.c: In function ‘main’:
./samples/SAFE/__tmp_b97c1c74.c:170:5: error: expected declaration or statement at end of input
  170 |     print_tokens(tokens, token_count);
      |     ^~~~~~~~~~~~
